# Eveheeero

./: .clang-format  .gitignore  README.md  temp.cpp
Code/Package/ASM/: .gitignore  ASM.S  ASM.cpp  a.sh  a1.s  a2.s  test.S  test.cpp
Code/Package/CustomSection/: First.cc
Code/Package/SharedLibrary/: LoadLibrary.cc  makeDll.c
Code/c/: ProcessList.c  ReadMemory.c  anti_window_sandbox.c  execve.c  execve_root.c  is_valid_pointer.c  printf.c  stdout_pointer_joy.c
Code/cc/: async.cc  big_array.cc  chrono.cc  class.cc  define_study.cc  des_move.cc  file_multi_reading.cc  filesystem.cc  generator.cc  goto.cc  inline_asm.cc  iostream_basic_ostream.cc  iostream_cerr.cc  map_vector.cc  ofstream_speed.cc  pointer_of_function.cc  thread.cc  thread_return.cc  try_catch.cc
Code/python/: Malware_Ai_Learning_script.py  bytes_mem_usage.py  csv_output_test.py  pd_wrapper_save.py  pipe.py  socketclient.py  str_mem_usage.py  uuid_speed.py
Jobs/: go.work
Jobs/BlobDownloader/: Program.cs
Jobs/BuildHyperscanFpic/: main.go
Jobs/Hook/: main.c
Jobs/JniSample/src/: BuildAndRun.sh  test_library.c
Jobs/JsonFormatter/: go.mod  main.go  main.py
Jobs/JsonFormatter/JsonFormatter/: __init__.py
Jobs/JsonFormatter/JsonFormatter/__mod__/: JsonFormatter.py
Jobs/JsonFormatter/core/: file.go  main.go  read.go
Jobs/Rdg/: Program.cs
Jobs/Rdg/Core/: Generator.cs  Test.cs
Jobs/Rdg/Core/Generator/: HumanName.cs  RegionName.cs
Jobs/Rdg/Utils/: Numbers.cs
Jobs/Simulation/: arrow.py  ball.py  main.py  object.py
Jobs/Translator/: Cargo.toml  README.md
Jobs/Translator/src/: lang.rs  lib.rs  main.rs
Jobs/dict_memo/: reader.py  writer.py
Jobs/fast-intmap/: Cargo.toml
Jobs/fast-intmap/benches/: bench.rs
Jobs/fast-intmap/src/: lib.rs
Jobs/hook/: Cargo.toml  rust-toolchain.toml
Jobs/hook/src/: winapi.rs  windows.rs
Jobs/hook/src/buffer/: mod.rs
Jobs/hyperscan-build/: Cargo.toml  build.rs
Jobs/hyperscan-build/src/: lib.rs  main.rs
Jobs/hyperscan-build/src/utils/: mod.rs
Jobs/memo/: go.mod  main.go
Jobs/memo/util/: folder.go
Jobs/memo/writer/: date.go
Modules/: BigInteger.cpp  Raphson.py  Trigamma.py  timeBenchmark.cpp  timeBenchmark.h
Modules/JniSample/: README.md
Modules/JniSample/src/: App.h  App.java  test_library.c
Modules/cnumpy_example/: main.c  run.py  setup.py
Modules/collection_performance/: Cargo.toml
Modules/collection_performance/benches/: map.rs  rayon.rs
Modules/collection_performance/src/: lib.rs  m.rs  main.rs
Modules/cpython_example/: main.c  run.py
Modules/cxx/: byte_len.ii  decimal.hh  main.cc  math.ii
Modules/manual_compile/: README.md  test.ll
Modules/math/: math.cpp  math.hpp  runner.cpp
Modules/python/: uuid_wrapper.py
Modules/rust-macro/: Cargo.toml
Modules/rust-macro/src/: lib.rs  main.rs
Modules/strlen/: strlen.cpp  strlen.ipp
Modules/threading_in_local/: Cargo.toml
Modules/threading_in_local/src/: main.rs  tokio_localkey.rs  tokio_localset.rs
Modules/timeBenchmark/: runner.cpp  timeBenchmark.cpp  timeBenchmark.h  timeBenchmark.hpp
