[package]
name = "google_translator"
version = "0.2.0"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
license = "MIT"
description = "Simple Custom Google Translator"
repository = "https://github.com/Eveheeero/Eveheeero/tree/de80c7e5645e85b1c645f0914024823972485861/Jobs/Translator"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
json = "0.12.4"
log = "0.4.17"
simplelog = "0.12.0"
clap = { version = "4.0.18", features = ["derive"] }
