[package]
name = "google_translator"
version = "0.2.3"
edition = "2021"
authors = ["Eveheeero <xhve00000@gmail.com>"]
license = "MIT"
description = "Simple Custom Google Translator"
repository = "https://github.com/Eveheeero/Eveheeero/tree/main/Jobs/Translator"

[[bin]]
name = "translate"
path = "src/main.rs"

[lib]
name = "google_translator"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
reqwest = "0.11"
json = "0.12.4"
log = "0.4.17"
clap = { version = "4.0.18", features = ["derive"] }
thiserror = "1.0.40"
