[package]
name = "hyperscan-build"
version = "0.1.0"
edition = "2021"

[dependencies]
# hyperscan = {version = "0.3.2", features = ["static"]}

[build-dependencies]
serde_json = "1.0.93"
once_cell = "1.17.1"
bytes = "1.4.0"
cmake = "0.1.49"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
git2 = "0.16.1"
tar = "0.4.38"
zip = "0.6.4"
flate2 = "1.0.25"
