[package]
name = "hyperscan-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hyperscan_build_run"
path = "src/main.rs"

[lib]
name = "hyperscan_build"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.93"
bytes = "1.4.0"
cmake = "0.1.49"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
git2 = "0.16.1"
tar = "0.4.38"
zip = "0.6.4"
flate2 = "1.0.25"
