[package]
name = "collection_performance"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = "0.13.1"
indexmap = "1.9.2"
ahash = "0.8.2"
dashmap = "5.4.0"
nohash-hasher = "0.2.0"
linked-hash-map = "0.5.6"
chashmap = "2.2.2"
intmap = "2.0.0"
flurry = "0.4.0"
metrohash = "1.0.6"
blake3 = "1.3.3"
